@@ -30,17 +30,17 @@ namespace CIAO
     class DDS_Subscriber_T;
 
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
-    class CCM_DDS_SubscriberListener_T :
+    class DDS_SubscriberListener_T :
       public virtual ::DDSSubscriberListener
     {
     typedef DDS_Subscriber_T<DDS_TYPE, VENDOR_TYPE> Subscriber_type;
     typedef DataReader_T<DDS_TYPE, VENDOR_TYPE> DataReader_type;
     public:
       /// Constructor
-      CCM_DDS_SubscriberListener_T ( ::DDS::SubscriberListener_ptr s);
+      DDS_SubscriberListener_T ( ::DDS::SubscriberListener_ptr s);
 
       /// Destructor
-      virtual ~CCM_DDS_SubscriberListener_T (void);
+      virtual ~DDS_SubscriberListener_T (void);
 
       virtual void
       on_requested_deadline_missed (
