@@ -25,7 +25,7 @@ namespace CIAO
     class DDS_DataWriter_T;
 
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
-    class CCM_DDS_DataWriterListener_T;
+    class DDS_DataWriterListener_T;
 
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
     class DDS_PublisherListener_T;
@@ -41,7 +41,7 @@ namespace CIAO
     typedef DDS_Topic_T<DDS_TYPE, VENDOR_TYPE> Topic_type;
 
     typedef DDS_DataWriter_T<DDS_TYPE, VENDOR_TYPE> DataWriter_type;
-    typedef CCM_DDS_DataWriterListener_T<DDS_TYPE, VENDOR_TYPE> DataWriterListener_type;
+    typedef DDS_DataWriterListener_T<DDS_TYPE, VENDOR_TYPE> DataWriterListener_type;
 
     typedef DDS_PublisherListener_T<DDS_TYPE, VENDOR_TYPE> PublisherListener_type;
     typedef DDS_DomainParticipant_T<DDS_TYPE, VENDOR_TYPE> DomainParticipant_type;
